Тестирование авторизации и регистрации пользователей